@@ -1,7 +1,5 @@
 /usr/lib/llvm-3.4/lib
 /usr/lib/llvm-3.4/build
 /usr/lib/llvm-3.4/include
-/usr/lib/llvm-3.4/build/unittests
-/usr/lib/llvm-3.4/build/utils/lit/
 usr/share/doc/llvm-3.4-dev
 usr/share/emacs/site-lisp/llvm-3.4
