@@ -5,35 +5,3 @@ usr/include/llvm-3.4/llvm usr/lib/llvm-3.4/include/llvm
 usr/include/llvm-c-3.4/llvm-c usr/lib/llvm-3.4/build/include/llvm-c
 usr/include/llvm-3.4/llvm usr/lib/llvm-3.4/build/include/llvm
 usr/lib/llvm-3.4/include/ usr/lib/llvm-3.4/build/include
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Release
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Release+Debug
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Unoptimized
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Debug
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Release+Profile
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Release+Debug+Profile
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Unoptimized+Profile
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Debug+Profile
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Release+Coverage
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Release+Debug+Coverage
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Unoptimized+Coverage
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Debug+Coverage
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Release+Profile+Coverage
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Release+Debug+Profile+Coverage
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Unoptimized+Profile+Coverage
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Debug+Profile+Coverage
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Release+Asserts
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Release+Debug+Asserts
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Unoptimized+Asserts
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Debug+Asserts
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Release+Profile+Asserts
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Release+Debug+Profile+Asserts
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Unoptimized+Profile+Asserts
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Debug+Profile+Asserts
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Release+Coverage+Asserts
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Release+Debug+Coverage+Asserts
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Unoptimized+Coverage+Asserts
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Debug+Coverage+Asserts
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Release+Profile+Coverage+Asserts
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Release+Debug+Profile+Coverage+Asserts
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Unoptimized+Profile+Coverage+Asserts
-usr/lib/llvm-3.4/ usr/lib/llvm-3.4/build/Debug+Profile+Coverage+Asserts
