@@ -1,0 +1,3 @@
+/usr/lib/llvm-3.4/build/unittests
+/usr/lib/llvm-3.4/build/utils/lit/
+
