@@ -4,6 +4,7 @@ llvm-toolchain-3.4 (1:3.4-2) UNRELEASED; urgency=medium
   * Fix the cindex.py declaration (3.3 => 3.5). Closes upstream bug #18365
   * Bring back the dependency on gcc 4.8. It breaks the nightly snapshot
     packages and it should be the norm now...
+  * Introduce llvm-3.4-tools to contain the new files needed by Martin
 
   [ Matthias Klose ]
   * Disable the lldb build for AArch64.
